--- a/src/notebook/neurogenesis.ipynb
+++ b/src/notebook/neurogenesis.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "A100"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -30,38 +13,43 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install git+https://github.com/huggingface/trl\n",
-        "!pip install --upgrade huggingface_hub"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "VMxybHHyjGP0"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install git+https://github.com/huggingface/trl\n",
+        "!pip install --upgrade huggingface_hub"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!huggingface-cli login --token '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'"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "NSvzl9MpjLsQ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!huggingface-cli login --token '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'"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Libraries"
-      ],
       "metadata": {
         "id": "7ZcQ_8FliOl1"
-      }
+      },
+      "source": [
+        "### Libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "id": "VXq2QKl1ipFK"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import json\n",
@@ -84,24 +72,24 @@
         "    torch.backends.cudnn.benchmark = False\n",
         "\n",
         "set_seed(42)\n"
-      ],
-      "metadata": {
-        "id": "VXq2QKl1ipFK"
-      },
-      "execution_count": 16,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### source code"
-      ],
       "metadata": {
         "id": "P4BBPQymirie"
-      }
+      },
+      "source": [
+        "### source code"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "pZZCboo-iOEy"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "def get_phi(m, D, which_phi='performer', device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
@@ -220,15 +208,15 @@
         "\n",
         "    # Move the result back to CPU for further processing or conversion to NumPy\n",
         "    return astro_ps_low_m.cpu().detach().numpy()"
-      ],
-      "metadata": {
-        "id": "pZZCboo-iOEy"
-      },
-      "execution_count": 17,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "2PvwyrNyiWm4"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "\n",
@@ -309,15 +297,15 @@
         "        if self.use_custom_encoder:\n",
         "            return logits\n",
         "        return logits\n"
-      ],
-      "metadata": {
-        "id": "2PvwyrNyiWm4"
-      },
-      "execution_count": 18,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "raonoMnyiaAE"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "def read_json(path):\n",
@@ -379,15 +367,15 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "raonoMnyiaAE"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "mP42ghUoid4e"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "def train_model(epochs, batch_size, val_dataset, train_dataset, model, run_id, task_id, patience=3):\n",
@@ -505,15 +493,15 @@
         "\n",
         "    print(\"Training complete.\")\n",
         "    return model, tokenizer, train_hist\n"
-      ],
-      "metadata": {
-        "id": "mP42ghUoid4e"
-      },
-      "execution_count": 20,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "5cj6w7XxiiW-"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "def test_model(model, test_dataset, batch_size):\n",
@@ -537,21 +525,25 @@
         "\n",
         "  print(f\"Test Accuracy: {test_accuracy:.4f}\")\n",
         "  return test_accuracy"
-      ],
-      "metadata": {
-        "id": "5cj6w7XxiiW-"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FJX5tb1IikvB",
+        "outputId": "ba3f8114-6d70-4b10-802e-0da400b2f3b4"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "\n",
-        "def main(out_dir, dataset_path, neuro_genesis, baseline_name,  batch_list, epoch_list, neuro_phi):\n",
+        "def main(out_dir, dataset_path, neuro_genesis, baseline_name, epoch_list, batch_list, neuro_phi):\n",
         "\n",
-        "\n",
+        "    \n",
         "    # torch.cuda.empty_cache()\n",
         "    for run_id in range(1,6):\n",
         "        results = []\n",
@@ -571,7 +563,7 @@
         "            val_prepared = data_preparation(val_data)\n",
         "            # all_labels.extend([item['relation'] for item in train_prepared])\n",
         "            # Create unique mapping for all labels\n",
-        "\n",
+        "            \n",
         "\n",
         "            train_labels = [item['relation'] for item in train_prepared]\n",
         "            train_sentences = [item['sentence'] for item in train_prepared]\n",
@@ -612,7 +604,7 @@
         "            # all_seen_test_data = RelationDataset(all_test_sentences, test_labels_seen, tokenizer, max_length=512)\n",
         "\n",
         "            for i, epoch in enumerate(epoch_list):\n",
-        "\n",
+        "            \n",
         "                for batch in batch_list:\n",
         "                    model, tokenizer, train_hist = train_model(epoch, batch, val_dataset, train_dataset, model, run_id, task_id)\n",
         "\n",
@@ -623,7 +615,7 @@
         "                    test_acc = test_model(model, test_dataset, batch)\n",
         "                    # test_seen_acc = test_model(model, all_seen_test_data, batch)\n",
         "\n",
-        "                    print(f\"Epoch-------------{epoch}=={i}\")\n",
+        "       \n",
         "                    result = {\"run_id\":run_id, \"task_id\": task_id, \"epoch\": epoch, \"batch_size\": batch, \"test_acc\": test_acc}\n",
         "                    results.append(result)\n",
         "                    write_json(results, f\"{out_dir}/results_{run_id}.json\")\n",
@@ -634,39 +626,36 @@
         "        del model\n",
         "\n",
         "if __name__ == \"__main__\":\n",
+        "    #drive folde=EMNLP-neurogenesis\n",
         "    output_dir = \"./neurogenesis_results_low\"\n",
+        "    phi = ['performer']\n",
         "    neuro_genesis = True\n",
         "    epoch_list = [1]\n",
         "    batch_list = [16]\n",
-        "    baseline_name = \"bert_large_performer_neurogenesis\"\n",
-        "    dataset_path = \"/content/tacred/final\"\n",
-        "    neuro_genesis_type_phi = \"performer\"\n",
-        "    main(output_dir, dataset_path, neuro_genesis,baseline_name, epoch_list, batch_list, neuro_genesis_type_phi)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FJX5tb1IikvB",
-        "outputId": "ba3f8114-6d70-4b10-802e-0da400b2f3b4"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/16\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Training:  48%|████▊     | 882/1820 [01:46<02:00,  7.82it/s, Batch Loss=1.03]"
-          ]
-        }
+        "    for neuro_genesis_type_phi in phi:\n",
+        "      baseline_name = \"bert_large_performer_neurogenesis\"\n",
+        "      dataset_path = \"/content/tacred/final\"\n",
+        "      output_dir = f\"drive/MyDrive/neurogenesis_results_{neuro_genesis_type_phi}\"\n",
+        "\n",
+        "      main(output_dir, dataset_path, neuro_genesis,baseline_name, epoch_list, batch_list, neuro_genesis_type_phi)\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
