--- a/src/significance_test/T_Test_neurogenesis.ipynb
+++ b/src/significance_test/T_Test_neurogenesis.ipynb
@@ -267,7 +267,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.7.7"
     }
   },
   "nbformat": 4,
