--- a/src/notebook/neurogenesis.ipynb
+++ b/src/notebook/neurogenesis.ipynb
@@ -31,7 +31,7 @@
       },
       "outputs": [],
       "source": [
-        "!huggingface-cli login --token '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'"
+        "!huggingface-cli login --token 'youtoken'"
       ]
     },
     {
