--- a/src/notebook/neurogenesis.ipynb
+++ b/src/notebook/neurogenesis.ipynb
@@ -626,7 +626,7 @@
         "        del model\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    #drive folde=EMNLP-neurogenesis\n",
+        "\n",
         "\n",
         "    phi = ['performer']\n",
         "    neuro_genesis = True\n",
@@ -634,8 +634,8 @@
         "    batch_list = [16]\n",
         "    for neuro_genesis_type_phi in phi:\n",
         "      baseline_name = \"bert_large_performer_neurogenesis\"\n",
-        "      dataset_path = \"/content/tacred/final\"\n",
-        "      output_dir = f\"drive/MyDrive/EMNLP-neurogenesis/neurogenesis_results_{neuro_genesis_type_phi}\"\n",
+        "      dataset_path = \"./tacred/final\"\n",
+        "      output_dir = f\"./neurogenesis_results_{neuro_genesis_type_phi}\"\n",
         "\n",
         "      main(output_dir, dataset_path, neuro_genesis,baseline_name, epoch_list, batch_list, neuro_genesis_type_phi)\n"
       ]
